# You must change these to your own details.
[package]
name = "zoo"
description = "zoo"
version = "0.1.0"
authors = ["Vlady Veselinov <vladyv@protonmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.95"
wee_alloc = { version = "0.4.5", optional = true }
gloo = "0.11.0"
console_error_panic_hook = "0.1.7"


# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.72"
features = [
  'Document',
  'Element',
  'EventTarget',
  'HtmlElement',
  'Node',
  'Window',
  'MouseEvent',
  "DomRect",
]


# For unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.45"
futures = "0.3.31"
js-sys = "0.3.72"
wasm-bindgen-futures = "0.4.45"
